k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: databeez-ui
  namespace: databeez
  labels:
    app: databeez-ui
spec:
  selector:
    app: databeez-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
